[tool.poetry]
name = "rl"
version = "0.1.0"
description = "Testing RL frameworks"
authors = ["Felipe Mateos <felipe_mateos@hotmail.com>"]
license = "None"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
torch = "^2.0.0"
gym = "0.21.0"
stable-baselines3 = "^1.8.0"

[tool.poetry.dev-dependencies]
debugpy = "pytest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
