[tool.poetry]
name = "rl"
version = "0.1.0"
description = "Testing RL frameworks"
authors = ["Felipe Mateos <felipe_mateos@hotmail.com>"]
license = "None"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
torch = "^2.0.0"
gym = "0.21.0"
stable-baselines3 = "^1.8.0"
click = "^8.1.3"
hydra-core = "^1.3.2"
pyglet = "1.5.27"

[tool.poetry.dev-dependencies]
debugpy = "pytest"
black = "^23.3.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
